--- a/config/.config/hypr_caelestia/hyprland/keybinds.conf
+++ b/config/.config/hypr_caelestia/hyprland/keybinds.conf
@@ -1,187 +1,220 @@
+# ------------------  
+#   Shell keybinds
+# ------------------  
 exec = hyprctl dispatch submap global
 submap = global
 
-# ## Shell keybinds
 # Launcher
-bindi = Super, Super_L, global, caelestia:launcher
-bindin = Super, catchall, global, caelestia:launcherInterrupt
-bindin = Super, mouse:272, global, caelestia:launcherInterrupt
-bindin = Super, mouse:273, global, caelestia:launcherInterrupt
-bindin = Super, mouse:274, global, caelestia:launcherInterrupt
-bindin = Super, mouse:275, global, caelestia:launcherInterrupt
-bindin = Super, mouse:276, global, caelestia:launcherInterrupt
-bindin = Super, mouse:277, global, caelestia:launcherInterrupt
-bindin = Super, mouse_up, global, caelestia:launcherInterrupt
-bindin = Super, mouse_down, global, caelestia:launcherInterrupt
+bindi = SUPER, SUPER_L, global, caelestia:launcher
+bindin = SUPER, catchall, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse:272, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse:273, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse:274, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse:275, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse:276, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse:277, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse_up, global, caelestia:launcherInterrupt
+bindin = SUPER, mouse_down, global, caelestia:launcherInterrupt
 
 # Misc
-bind = Ctrl+Alt, Delete, global, caelestia:session
-bindl = Ctrl+Alt, C, global, caelestia:clearNotifs
-bind = Super, K, global, caelestia:showall
-bind = Super, L, global, caelestia:lock
+bind = CTRL Alt, Delete, global, caelestia:session
+bindl = CTRL Alt, C, global, caelestia:clearNotifs
+bind = SUPER, A, global, caelestia:showall
+bindl = SUPER CTRL, L, global, caelestia:lock
 
 # Restore lock
-bindl = Super+Alt, L, exec, caelestia shell -d
-bindl = Super+Alt, L, global, caelestia:lock
+bindl = SUPER Alt, L, exec, caelestia shell -d
+bindl = SUPER, L, global, caelestia:lock
 
 # Brightness
 bindl = , XF86MonBrightnessUp, global, caelestia:brightnessUp
 bindl = , XF86MonBrightnessDown, global, caelestia:brightnessDown
 
-# Media
-bindl = Ctrl+Super, Space, global, caelestia:mediaToggle
-bindl = , XF86AudioPlay, global, caelestia:mediaToggle
-bindl = , XF86AudioPause, global, caelestia:mediaToggle
-bindl = Ctrl+Super, Equal, global, caelestia:mediaNext
-bindl = , XF86AudioNext, global, caelestia:mediaNext
-bindl = Ctrl+Super, Minus, global, caelestia:mediaPrev
-bindl = , XF86AudioPrev, global, caelestia:mediaPrev
-bindl = , XF86AudioStop, global, caelestia:mediaStop
-
-# Kill/restart
-bindr = Ctrl+Super+Shift, R, exec, qs -c caelestia kill
-bindr = Ctrl+Super+Alt, R, exec, qs -c caelestia kill; caelestia shell -d
-
-# Go to workspace #
-$wsaction = ~/.config/hypr/scripts/wsaction.fish
-bind = Super, 1, exec, $wsaction workspace 1
-bind = Super, 2, exec, $wsaction workspace 2
-bind = Super, 3, exec, $wsaction workspace 3
-bind = Super, 4, exec, $wsaction workspace 4
-bind = Super, 5, exec, $wsaction workspace 5
-bind = Super, 6, exec, $wsaction workspace 6
-bind = Super, 7, exec, $wsaction workspace 7
-bind = Super, 8, exec, $wsaction workspace 8
-bind = Super, 9, exec, $wsaction workspace 9
-bind = Super, 0, exec, $wsaction workspace 10
-# Go to workspace group #
-bind = Ctrl+Super, 1, exec, $wsaction -g workspace 1
-bind = Ctrl+Super, 2, exec, $wsaction -g workspace 2
-bind = Ctrl+Super, 3, exec, $wsaction -g workspace 3
-bind = Ctrl+Super, 4, exec, $wsaction -g workspace 4
-bind = Ctrl+Super, 5, exec, $wsaction -g workspace 5
-bind = Ctrl+Super, 6, exec, $wsaction -g workspace 6
-bind = Ctrl+Super, 7, exec, $wsaction -g workspace 7
-bind = Ctrl+Super, 8, exec, $wsaction -g workspace 8
-bind = Ctrl+Super, 9, exec, $wsaction -g workspace 9
-bind = Ctrl+Super, 0, exec, $wsaction -g workspace 10
-# Go to workspace -1/+1
-bind = Super, mouse_down, workspace, -1
-bind = Super, mouse_up, workspace, +1
-binde = Ctrl+Super, left, workspace, -1
-binde = Super, Page_Up, workspace, -1
-binde = Ctrl+Super, right, workspace, +1
-binde = Super, Page_Down, workspace, +1
-# Go to workspace group -1/+1
-bind = Ctrl+Super, mouse_down, workspace, -10
-bind = Ctrl+Super, mouse_up, workspace, +10
-# Toggle special workspace
-bind = Super, S, exec, caelestia toggle specialws
-
-# Move window to workspace #
-bind = Super+Alt, 1, exec, $wsaction movetoworkspace 1
-bind = Super+Alt, 2, exec, $wsaction movetoworkspace 2
-bind = Super+Alt, 3, exec, $wsaction movetoworkspace 3
-bind = Super+Alt, 4, exec, $wsaction movetoworkspace 4
-bind = Super+Alt, 5, exec, $wsaction movetoworkspace 5
-bind = Super+Alt, 6, exec, $wsaction movetoworkspace 6
-bind = Super+Alt, 7, exec, $wsaction movetoworkspace 7
-bind = Super+Alt, 8, exec, $wsaction movetoworkspace 8
-bind = Super+Alt, 9, exec, $wsaction movetoworkspace 9
-bind = Super+Alt, 0, exec, $wsaction movetoworkspace 10
-# Move window to workspace group #
-bind = Ctrl+Super+Alt, 1, exec, $wsaction -g movetoworkspace 1
-bind = Ctrl+Super+Alt, 2, exec, $wsaction -g movetoworkspace 2
-bind = Ctrl+Super+Alt, 3, exec, $wsaction -g movetoworkspace 3
-bind = Ctrl+Super+Alt, 4, exec, $wsaction -g movetoworkspace 4
-bind = Ctrl+Super+Alt, 5, exec, $wsaction -g movetoworkspace 5
-bind = Ctrl+Super+Alt, 6, exec, $wsaction -g movetoworkspace 6
-bind = Ctrl+Super+Alt, 7, exec, $wsaction -g movetoworkspace 7
-bind = Ctrl+Super+Alt, 8, exec, $wsaction -g movetoworkspace 8
-bind = Ctrl+Super+Alt, 9, exec, $wsaction -g movetoworkspace 9
-bind = Ctrl+Super+Alt, 0, exec, $wsaction -g movetoworkspace 10
-# Move window to workspace -1/+1
-binde = Super+Alt, Page_Up, movetoworkspace, -1
-binde = Super+Alt, Page_Down, movetoworkspace, +1
-bind = Super+Alt, mouse_down, movetoworkspace, -1
-bind = Super+Alt, mouse_up, movetoworkspace, +1
-binde = Ctrl+Super+Shift, right, movetoworkspace, +1
-binde = Ctrl+Super+Shift, left, movetoworkspace, -1
-# Move window to/from special workspace
-bind = Ctrl+Super+Shift, up, movetoworkspace, special:special
-bind = Ctrl+Super+Shift, down, movetoworkspace, e+0
-bind = Super+Alt, S, movetoworkspace, special:special
-
-# Window groups
-binde = Alt, Tab, cyclenext, activewindow
-binde = Ctrl+Alt, Tab, changegroupactive, f
-bind = Super, Comma, togglegroup
-bind = Super+Shift, Comma, lockactivegroup, toggle
-
-# Window actions
-bind = Super, left, movefocus, l
-bind = Super, right, movefocus, r
-bind = Super, up, movefocus, u
-bind = Super, down, movefocus, d
-bind = Super+Shift, left, movewindow, l
-bind = Super+Shift, right, movewindow, r
-bind = Super+Shift, up, movewindow, u
-bind = Super+Shift, down, movewindow, d
-binde = Super, Minus, splitratio, -0.1
-binde = Super, Equal, splitratio, 0.1
-bindm = Super, mouse:272, movewindow
-bindm = Super, Z, movewindow
-bindm = Super, mouse:273, resizewindow
-bindm = Super, X, resizewindow
-bind = Ctrl+Super, Backslash, centerwindow, 1
-bind = Ctrl+Super+Alt, Backslash, resizeactive, exact 55% 70%
-bind = Ctrl+Super+Alt, Backslash, centerwindow, 1
-bind = Super+Alt, Backslash, exec, caelestia pip  # Move window to picture-in-picture mode
-bind = Super, P, pin
-bind = Super, F, fullscreen, 0
-bind = Super+Alt, F, fullscreen, 1  # Fullscreen with borders
-bind = Super+Alt, Space, togglefloating,
-bind = Super, Q, killactive,
-
-# Special workspace toggles
-bind = Ctrl+Shift, Escape, exec, caelestia toggle sysmon
-bind = Super, M, exec, caelestia toggle music
-bind = Super, D, exec, caelestia toggle communication
-bind = Super, R, exec, caelestia toggle todo
-
-# Apps
-bind = Super, T, exec, app2unit -- foot
-bind = Super, W, exec, app2unit -- zen-browser
-bind = Super, C, exec, app2unit -- codium
-bind = Super, G, exec, app2unit -- github-desktop
-bind = Super, E, exec, app2unit -- thunar
-bind = Super+Alt, E, exec, app2unit -- nemo
-bind = Ctrl+Alt, Escape, exec, app2unit -- qps
-bind = Ctrl+Alt, V, exec, app2unit -- pavucontrol
-
-# Utilities
-bindl = , Print, exec, caelestia screenshot  # Full screen capture > clipboard
-bind = Super+Shift, S, global, caelestia:screenshotFreeze  # Capture region (freeze)
-bind = Super+Shift+Alt, S, global, caelestia:screenshot  # Capture region
-bind = Super+Alt, R, exec, caelestia record -s  # Record screen with sound
-bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
-bind = Super+Shift+Alt, R, exec, caelestia record -r  # Record region
-bind = Super+Shift, C, exec, hyprpicker -a  # Colour picker
-
 # Volume
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl = Super+Shift, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = SUPER SHIFT, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 10%+
 bindle = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume @DEFAULT_AUDIO_SINK@ 10%-
 
-# Sleep
-bind = Super+Shift, L, exec, systemctl suspend-then-hibernate
+# --------
+#  MEDIA
+# --------
+bindl = CTRL SUPER, Space, global, caelestia:mediaToggle
+bindl = , XF86AudioPlay, global, caelestia:mediaToggle
+bindl = , XF86AudioPause, global, caelestia:mediaToggle
+bindl = CTRL SUPER, Equal, global, caelestia:mediaNext
+bindl = , XF86AudioNext, global, caelestia:mediaNext
+bindl = CTRL SUPER, Minus, global, caelestia:mediaPrev
+bindl = , XF86AudioPrev, global, caelestia:mediaPrev
+bindl = , XF86AudioStop, global, caelestia:mediaStop
+
+# -----------------------------------
+#   Kill/Restart - Caelestia Daemon
+# -----------------------------------
+bindr = CTRL SUPER SHIFT, R, exec, qs -c caelestia kill
+bindr = CTRL SUPER Alt, R, exec, qs -c caelestia kill; caelestia shell -d
+
+# ------------------------
+#   Go to Workspace -1/1
+# ------------------------
+bind = SUPER, mouse_down, workspace, -1
+bind = SUPER, mouse_up, workspace,  1
+
+binde = SUPER, Page_Up, workspace, -1
+binde = SUPER, Page_Down, workspace,  1
+
+# ----------------------------------
+#   Move window to workspace -1/ 1
+# ----------------------------------
+binde = SUPER Alt, Page_Up, movetoworkspace, -1
+binde = SUPER Alt, Page_Down, movetoworkspace,  1
+
+bind = SUPER Alt, mouse_down, movetoworkspace, -1
+bind = SUPER Alt, mouse_up, movetoworkspace,  1
+
+# ----------------------------
+#   Toggle Special Workspace
+# ----------------------------
+bind = SUPER SHIFT, S, exec, caelestia toggle specialws
+bind = Ctrl+Shift, Escape, exec, caelestia toggle sysmon #Btop
+bind = SUPER, M, exec, caelestia toggle music # Spotify
+bind = Super, D, exec, caelestia toggle communication # Discord
+bind = SUPER, R, exec, caelestia toggle todo #¯\_(ツ)_/¯
+
+# -----------------------------------------
+#   Move Window to/from Special Workspace
+# -----------------------------------------
+bind = CTRL SHIFT, up, movetoworkspace, special:special
+bind = CTRL SHIFT, down, movetoworkspace, e 0
+bind = SUPER Alt, S, movetoworkspace, special:special
+
+# -------------------
+#   Go To Workspace
+# -------------------
+$wsaction = ~/.config/hypr/scripts/wsaction.fish
+bind = SUPER, 1, exec, $wsaction workspace 1
+bind = SUPER, 2, exec, $wsaction workspace 2
+bind = SUPER, 3, exec, $wsaction workspace 3
+bind = SUPER, 4, exec, $wsaction workspace 4
+bind = SUPER, 5, exec, $wsaction workspace 5
+bind = SUPER, 6, exec, $wsaction workspace 6
+bind = SUPER, 7, exec, $wsaction workspace 7
+bind = SUPER, 8, exec, $wsaction workspace 8
+bind = SUPER, 9, exec, $wsaction workspace 9
+bind = SUPER, 0, exec, $wsaction workspace 10
+
+# ----------------------------
+#   Move Window to Workspace 
+# ----------------------------
+bind = SUPER Alt, 1, exec, $wsaction movetoworkspace 1
+bind = SUPER Alt, 2, exec, $wsaction movetoworkspace 2
+bind = SUPER Alt, 3, exec, $wsaction movetoworkspace 3
+bind = SUPER Alt, 4, exec, $wsaction movetoworkspace 4
+bind = SUPER Alt, 5, exec, $wsaction movetoworkspace 5
+bind = SUPER Alt, 6, exec, $wsaction movetoworkspace 6
+bind = SUPER Alt, 7, exec, $wsaction movetoworkspace 7
+bind = SUPER Alt, 8, exec, $wsaction movetoworkspace 8
+bind = SUPER Alt, 9, exec, $wsaction movetoworkspace 9
+bind = SUPER Alt, 0, exec, $wsaction movetoworkspace 10
+
+# -------------------------
+#   Go to Workspace Group 
+# -------------------------
+bind = CTRL SUPER, 1, exec, $wsaction -g workspace 1
+bind = CTRL SUPER, 2, exec, $wsaction -g workspace 2
+bind = CTRL SUPER, 3, exec, $wsaction -g workspace 3
+bind = CTRL SUPER, 4, exec, $wsaction -g workspace 4
+bind = CTRL SUPER, 5, exec, $wsaction -g workspace 5
+bind = CTRL SUPER, 6, exec, $wsaction -g workspace 6
+bind = CTRL SUPER, 7, exec, $wsaction -g workspace 7
+bind = CTRL SUPER, 8, exec, $wsaction -g workspace 8
+bind = CTRL SUPER, 9, exec, $wsaction -g workspace 9
+bind = CTRL SUPER, 0, exec, $wsaction -g workspace 10
+
+# ----------------------------------
+#   Move Window to Workspace Group 
+# ----------------------------------
+bind = CTRL SUPER Alt, 1, exec, $wsaction -g movetoworkspace 1
+bind = CTRL SUPER Alt, 2, exec, $wsaction -g movetoworkspace 2
+bind = CTRL SUPER Alt, 3, exec, $wsaction -g movetoworkspace 3
+bind = CTRL SUPER Alt, 4, exec, $wsaction -g movetoworkspace 4
+bind = CTRL SUPER Alt, 5, exec, $wsaction -g movetoworkspace 5
+bind = CTRL SUPER Alt, 6, exec, $wsaction -g movetoworkspace 6
+bind = CTRL SUPER Alt, 7, exec, $wsaction -g movetoworkspace 7
+bind = CTRL SUPER Alt, 8, exec, $wsaction -g movetoworkspace 8
+bind = CTRL SUPER Alt, 9, exec, $wsaction -g movetoworkspace 9
+bind = CTRL SUPER Alt, 0, exec, $wsaction -g movetoworkspace 10
+
+# ------------------------------------------
+#   Move window to/from special workspace
+# ------------------------------------------
+bind = Ctrl SUPER SHIFT, up, movetoworkspace, special:special
+bind = Ctrl SUPER SHIFT, down, movetoworkspace, e+0
+bind = SUPER Alt, S, movetoworkspace, special:special
+
+# ------------------  
+#   Window groups
+# ------------------  
+binde = Alt, Tab, cyclenext, activewindow
+binde = Ctrl+Alt, Tab, changegroupactive, f
+bind = SUPER, Comma, togglegroup
+bind = SUPER SHIFT, Comma, lockactivegroup, toggle
+
+# Window actions
+bind = SUPER, left, movefocus, l
+bind = SUPER, right, movefocus, r
+bind = SUPER, up, movefocus, u
+bind = SUPER, down, movefocus, d
+bind = SUPER+Shift, left, movewindow, l
+bind = SUPER+Shift, right, movewindow, r
+bind = SUPER+Shift, up, movewindow, u
+bind = SUPER+Shift, down, movewindow, d
+binde = SUPER, Minus, splitratio, -0.1
+binde = SUPER, Equal, splitratio, 0.1
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, Z, movewindow
+bindm = SUPER, mouse:273, resizewindow
+bindm = SUPER, X, resizewindow
+bind = Ctrl+SUPER, Backslash, centerwindow, 1
+bind = Ctrl+SUPER+Alt, Backslash, resizeactive, exact 55% 70%
+bind = Ctrl+SUPER+Alt, Backslash, centerwindow, 1
+bind = SUPER+Alt, Backslash, exec, caelestia pip  # Move window to picture-in-picture mode
+bind = SUPER, P, pin
+bind = SUPER, F, fullscreen, 0
+bind = SUPER+Alt, F, fullscreen, 1  # Fullscreen with borders
+bind = SUPER+Alt, Space, togglefloating,
+bind = SUPER, Q, killactive,
+
+# Special workspace toggles
+bind = Ctrl SHIFT, Escape, exec, caelestia toggle sysmon
+bind = SUPER, M, exec, caelestia toggle music
+bind = SUPER, D, exec, caelestia toggle communication
+bind = SUPER, R, exec, caelestia toggle todo
+
+# Apps
+bind = SUPER, T, exec, app2unit -- ghostty
+bind = SUPER, Z, exec, app2unit -- zen-browser
+# bind = SUPER, C, exec, app2unit -- codium
+bind = SUPER, G, exec, app2unit -- github-desktop
+bind = SUPER, E, exec, app2unit -- nautilus --new-window
+bind = SUPER Alt, E, exec, app2unit -- nemo
+bind = Ctrl Alt, Escape, exec, app2unit -- qps
+bind = SUPER, V, exec, app2unit -- pavucontrol
+
+# Utilities
+bindl = , Print, exec, caelestia screenshot  # Full screen capture > clipboard
+bind = SUPER+Shift, S, global, caelestia:screenshotFreeze  # Capture region (freeze)
+bind = SUPER+Shift+Alt, S, global, caelestia:screenshot  # Capture region
+bind = SUPER+Alt, R, exec, caelestia record -s  # Record screen with sound
+bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
+bind = SUPER+Shift+Alt, R, exec, caelestia record -r  # Record region
+bind = SUPER+Shift, C, exec, hyprpicker -a  # Colour picker
 
 # Clipboard and emoji picker
-bind = Super, V, exec, pkill fuzzel || caelestia clipboard
-bind = Super+Alt, V, exec, pkill fuzzel || caelestia clipboard -d
-bind = Super, Period, exec, pkill fuzzel || caelestia emoji -p
+bind = SUPER, V, exec, pkill fuzzel || caelestia clipboard
+bind = SUPER+Alt, V, exec, pkill fuzzel || caelestia clipboard -d
+bind = SUPER, Period, exec, pkill fuzzel || caelestia emoji -p
 bindl = Ctrl+Shift+Alt, V, exec, sleep 0.5s && ydotool type -d 1 "$(cliphist list | head -1 | cliphist decode)"  # Alternate paste
 
 # Testing
-bindl = Super+Alt, f12, exec, notify-send -u low -i dialog-information-symbolic 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action"
+bindl = SUPER+Alt, f12, exec, notify-send -u low -i dialog-information-symbolic 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action"
