--- a/config/.config/hypr_bak/hyprland/keybinds.conf
+++ b/config/.config/hypr_bak/hyprland/keybinds.conf
@@ -1,8 +1,12 @@
+# ------------------  
+#   Shell keybinds
+# ------------------  
 exec = hyprctl dispatch submap global
 submap = global
 
-# ## Shell keybinds
-# Launcher
+# -------------
+#   Launcher
+# -------------
 bindi = SUPER, SUPER_L, global, caelestia:launcher
 bindin = SUPER, catchall, global, caelestia:launcherInterrupt
 bindin = SUPER, mouse:272, global, caelestia:launcherInterrupt
@@ -14,7 +18,9 @@ bindin = SUPER, mouse:277, global, caelestia:launcherInterrupt
 bindin = SUPER, mouse_up, global, caelestia:launcherInterrupt
 bindin = SUPER, mouse_down, global, caelestia:launcherInterrupt
 
-# Misc
+# --------
+#   Misc 
+# --------
 bind = CTRL Alt, Delete, global, caelestia:session
 bindl = CTRL Alt, C, global, caelestia:clearNotifs
 bind = SUPER, A, global, caelestia:showall
