--- a/config/.config/hypr_caelestia/hyprland.conf
+++ b/config/.config/hypr_caelestia/hyprland.conf
@@ -3,7 +3,7 @@ $hypr = ~/.config/hypr/hyprland
 # Other configs
 source = $hypr/general.conf
 source = $hypr/env.conf
-source = $hypr/animations.conf
+source = $hypr/animations/lime.conf
 source = $hypr/decoration.conf
 source = $hypr/execs.conf
 source = $hypr/rules.conf
@@ -15,5 +15,5 @@ source = $hypr/colours.conf
 # source = $hypr/overrides.conf
 
 # User styles in ~/.config/caelestia
-exec = mkdir -p ~/.config/caelestia && touch -a ~/.config/caelestia/hypr-user.conf
-source = ~/.config/caelestia/hypr-user.conf
+# exec = mkdir -p ~/.config/caelestia && touch -a ~/.config/caelestia/hypr-user.conf
+source = $hypr/hyprland/caelestia/hypr-user
