--- a/config/.config/hypr_caelestia/hyprland/keybinds.conf
+++ b/config/.config/hypr_caelestia/hyprland/keybinds.conf
@@ -4,7 +4,9 @@
 exec = hyprctl dispatch submap global
 submap = global
 
-# Launcher
+# -------------
+#   Launcher
+# -------------
 bindi = SUPER, SUPER_L, global, caelestia:launcher
 bindin = SUPER, catchall, global, caelestia:launcherInterrupt
 bindin = SUPER, mouse:272, global, caelestia:launcherInterrupt
@@ -16,21 +18,29 @@ bindin = SUPER, mouse:277, global, caelestia:launcherInterrupt
 bindin = SUPER, mouse_up, global, caelestia:launcherInterrupt
 bindin = SUPER, mouse_down, global, caelestia:launcherInterrupt
 
-# Misc
+# --------
+#   Misc 
+# --------
 bind = CTRL Alt, Delete, global, caelestia:session
 bindl = CTRL Alt, C, global, caelestia:clearNotifs
 bind = SUPER, A, global, caelestia:showall
 bindl = SUPER CTRL, L, global, caelestia:lock
 
-# Restore lock
+# ----------------
+#   Restore lock
+# ----------------
 bindl = SUPER Alt, L, exec, caelestia shell -d
 bindl = SUPER, L, global, caelestia:lock
 
-# Brightness
+# ---------------
+#   Brightness
+# ---------------
 bindl = , XF86MonBrightnessUp, global, caelestia:brightnessUp
 bindl = , XF86MonBrightnessDown, global, caelestia:brightnessDown
 
-# Volume
+# -----------
+#   Volume
+# -----------
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl = SUPER SHIFT, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 10%+
@@ -44,15 +54,13 @@ bindl = , XF86AudioPlay, global, caelestia:mediaToggle
 bindl = , XF86AudioPause, global, caelestia:mediaToggle
 bindl = CTRL SUPER, Equal, global, caelestia:mediaNext
 bindl = , XF86AudioNext, global, caelestia:mediaNext
-bindl = CTRL SUPER, Minus, global, caelestia:mediaPrev
-bindl = , XF86AudioPrev, global, caelestia:mediaPrev
 bindl = , XF86AudioStop, global, caelestia:mediaStop
 
 # -----------------------------------
 #   Kill/Restart - Caelestia Daemon
 # -----------------------------------
-bindr = CTRL SUPER SHIFT, R, exec, qs -c caelestia kill
-bindr = CTRL SUPER Alt, R, exec, qs -c caelestia kill; caelestia shell -d
+bindr = CTRL SUPER SHIFT, R, exec, qs -c caelestia kill; caelestia shell -d
+bindr = CTRL SUPER Alt, R, exec, qs -c caelestia kill
 
 # ------------------------
 #   Go to Workspace -1/1
@@ -76,9 +84,9 @@ bind = SUPER Alt, mouse_up, movetoworkspace,  1
 #   Toggle Special Workspace
 # ----------------------------
 bind = SUPER SHIFT, S, exec, caelestia toggle specialws
-bind = Ctrl+Shift, Escape, exec, caelestia toggle sysmon #Btop
+bind = Ctrl SHIFT, Escape, exec, caelestia toggle sysmon #Btop
 bind = SUPER, M, exec, caelestia toggle music # Spotify
-bind = Super, D, exec, caelestia toggle communication # Discord
+# bind = Super, D, exec, caelestia toggle communication # Discord
 bind = SUPER, R, exec, caelestia toggle todo #¯\_(ツ)_/¯
 
 # -----------------------------------------
@@ -160,61 +168,71 @@ binde = Ctrl+Alt, Tab, changegroupactive, f
 bind = SUPER, Comma, togglegroup
 bind = SUPER SHIFT, Comma, lockactivegroup, toggle
 
-# Window actions
+# --------------------------
+#  Window Navigation Binds
+# --------------------------
 bind = SUPER, left, movefocus, l
 bind = SUPER, right, movefocus, r
 bind = SUPER, up, movefocus, u
 bind = SUPER, down, movefocus, d
-bind = SUPER+Shift, left, movewindow, l
-bind = SUPER+Shift, right, movewindow, r
-bind = SUPER+Shift, up, movewindow, u
-bind = SUPER+Shift, down, movewindow, d
+
+# ---------------------------------
+#  VIM BINDS To Navigative Windows
+# ---------------------------------
+bind = SUPER SHIFT, H, movefocus, l
+bind = SUPER SHIFT, J, movefocus, d
+bind = SUPER SHIFT, K, movefocus, u
+bind = SUPER SHIFT, L, movefocus, r
+
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, down, movewindow, d
+
+# -----------------
+#  Window Actions
+# -----------------
 binde = SUPER, Minus, splitratio, -0.1
 binde = SUPER, Equal, splitratio, 0.1
 bindm = SUPER, mouse:272, movewindow
-bindm = SUPER, Z, movewindow
 bindm = SUPER, mouse:273, resizewindow
-bindm = SUPER, X, resizewindow
-bind = Ctrl+SUPER, Backslash, centerwindow, 1
-bind = Ctrl+SUPER+Alt, Backslash, resizeactive, exact 55% 70%
-bind = Ctrl+SUPER+Alt, Backslash, centerwindow, 1
-bind = SUPER+Alt, Backslash, exec, caelestia pip  # Move window to picture-in-picture mode
+
+bind = CTRL SUPER, Backslash, centerwindow, 1
+bind = CTRL SUPER Alt, Backslash, resizeactive, exact 55% 70%
+bind = CTRL SUPER Alt, Backslash, centerwindow, 1
+
+bind = SUPER Alt, Backslash, exec, caelestia pip  # Move window to picture-in-picture mode
 bind = SUPER, P, pin
 bind = SUPER, F, fullscreen, 0
-bind = SUPER+Alt, F, fullscreen, 1  # Fullscreen with borders
-bind = SUPER+Alt, Space, togglefloating,
+bind = SUPER Alt, F, fullscreen, 1  # Fullscreen with borders
+bind = SUPER Alt, Space, togglefloating,
 bind = SUPER, Q, killactive,
 
-# Special workspace toggles
-bind = Ctrl SHIFT, Escape, exec, caelestia toggle sysmon
-bind = SUPER, M, exec, caelestia toggle music
-bind = SUPER, D, exec, caelestia toggle communication
-bind = SUPER, R, exec, caelestia toggle todo
-
-# Apps
-bind = SUPER, T, exec, app2unit -- ghostty
-bind = SUPER, Z, exec, app2unit -- zen-browser
-# bind = SUPER, C, exec, app2unit -- codium
-bind = SUPER, G, exec, app2unit -- github-desktop
-bind = SUPER, E, exec, app2unit -- nautilus --new-window
-bind = SUPER Alt, E, exec, app2unit -- nemo
-bind = Ctrl Alt, Escape, exec, app2unit -- qps
-bind = SUPER, V, exec, app2unit -- pavucontrol
-
-# Utilities
+# -------------
+#   Utilities
+# -------------
 bindl = , Print, exec, caelestia screenshot  # Full screen capture > clipboard
-bind = SUPER+Shift, S, global, caelestia:screenshotFreeze  # Capture region (freeze)
-bind = SUPER+Shift+Alt, S, global, caelestia:screenshot  # Capture region
-bind = SUPER+Alt, R, exec, caelestia record -s  # Record screen with sound
-bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
+bind = SUPER Alt, S, global, caelestia:screenshotFreeze  # Capture region (freeze)
+# bind = SUPER SHIFT, S, global, caelestia:screenshot  # Capture region
+
+bind = SUPER Alt, R, exec, caelestia record -s  # Record screen with sound
+bind = Ctrl Alt, R, exec, caelestia record  # Record screen
 bind = SUPER+Shift+Alt, R, exec, caelestia record -r  # Record region
+
 bind = SUPER+Shift, C, exec, hyprpicker -a  # Colour picker
 
-# Clipboard and emoji picker
-bind = SUPER, V, exec, pkill fuzzel || caelestia clipboard
-bind = SUPER+Alt, V, exec, pkill fuzzel || caelestia clipboard -d
-bind = SUPER, Period, exec, pkill fuzzel || caelestia emoji -p
-bindl = Ctrl+Shift+Alt, V, exec, sleep 0.5s && ydotool type -d 1 "$(cliphist list | head -1 | cliphist decode)"  # Alternate paste
+# -------------------------------
+#   Clipboard and emoji picker
+# -------------------------------
+bind = SUPER, H, exec, pkill fuzzel || caelestia clipboard
+bind = SUPER Alt, H, exec, cliphist wipe # Purge clipboard history
 
-# Testing
+bind = SUPER, Period, exec, pkill fuzzel || caelestia emoji -p
+
+bind = SUPER Alt, V, exec, pkill fuzzel || caelestia clipboard -d
+bindl = CTRL SHIFT Alt, V, exec, sleep 0.5s && ydotool type -d 1 "$(cliphist list | head -1 | cliphist decode)"  # Alternate paste
+
+# ------------
+#   Testing
+# ------------
 bindl = SUPER+Alt, f12, exec, notify-send -u low -i dialog-information-symbolic 'Test notification' "Here's a really long message to test truncation and wrapping\nYou can middle click or flick this notification to dismiss it!" -a 'Shell' -A "Test1=I got it!" -A "Test2=Another action"
