--- a/config/.config/hypr_caelestia/hyprland/rules.conf
+++ b/config/.config/hypr_caelestia/hyprland/rules.conf
@@ -2,6 +2,11 @@
 windowrule = opaque, class:foot|equibop  # They use native transparency
 windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (not xwayland cause popups)
 
+# Disable blur for XWayland windows (or context menus with shadow would look weird)
+windowrulev2 = noblur, xwayland:1
+# No shadow for tiled windows (matches windows that are not floating).
+windowrulev2 = noshadow, floating:0
+
 # Float
 windowrule = float, class:guifetch  # FlafyDev/guifetch
 windowrule = float, class:yad
@@ -37,7 +42,9 @@ windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wa
 windowrule = workspace special:communication, class:discord|equibop|vesktop|whatsapp
 windowrule = workspace special:todo, class:Todoist
 
-# Dialogs
+# --------------------
+#   Dialogs Windows
+# --------------------
 windowrule = float, title:(Select|Open)( a)? (File|Folder)(s)?
 windowrule = float, title:File (Operation|Upload)( Progress)?
 windowrule = float, title:.* Properties
@@ -46,7 +53,22 @@ windowrule = float, title:GIMP Crash Debug
 windowrule = float, title:Save As
 windowrule = float, title:Library
 
-# Picture in picture (resize and move done via script)
+windowrulev2 = float, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
+windowrulev2 = center, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
+windowrulev2 = size 800 600, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
+windowrulev2 = minsize 400 300, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
+
+# [ Archive extraction dialogs - Center + Float ] 
+windowrulev2 = float, title:^(Extract|Extract Here|Extract to Folder|Archive Extractor)(.*)$
+windowrulev2 = center, title:^(Extract|Extract Here|Extract to Folder|Archive Extractor)(.*)$
+windowrulev2 = size 800 600, title:^(Extract|Extract Here|Extract to Folder|Archive Extractor)(.*)$
+
+# [ Generic GTK/Qt dialogs (fallback) ] 
+windowrulev2 = float, class:^(.*)(dialog|Dialog)(.*)$
+windowrulev2 = center, class:^(.*)(dialog|Dialog)(.*)$
+windowrulev2 = size 800 600, class:^(.*)(dialog|Dialog)(.*)$
+
+# [ Picture in picture (resize and move done via script) ]
 windowrule = move 100%-w-2% 100%-w-3%, title:Picture(-| )in(-| )[Pp]icture  # Initial move so window doesn't shoot across the screen from the center
 windowrule = keepaspectratio, title:Picture(-| )in(-| )[Pp]icture
 windowrule = float, title:Picture(-| )in(-| )[Pp]icture
@@ -84,11 +106,8 @@ layerrule = animation popin 80%, launcher
 layerrule = blur, launcher
 
 # Shell
-layerrule = noanim, caelestia-(launcher|osd|notifications|border-exclusion|area-picker)
+layerrule = noanim, caelestia-(border-exclusion|area-picker)
 layerrule = animation fade, caelestia-(drawers|background)
-layerrule = order 1, caelestia-border-exclusion
-layerrule = order 2, caelestia-bar
-#layerrule = xray 1, caelestia-(border|launcher|bar|sidebar|navbar|mediadisplay|screencorners)
-#layerrule = blur, caelestia-.*
-#layerrule = blurpopups, caelestia-.*
-#layerrule = ignorealpha 0.57, caelestia-.*
+
+layerrule = blur, caelestia-drawers
+layerrule = ignorealpha 0.57, caelestia-drawers
