--- a/config/.config/hypr_caelestia/hyprland/general.conf
+++ b/config/.config/hypr_caelestia/hyprland/general.conf
@@ -2,17 +2,20 @@ monitor = , preferred, auto, 1.2
 
 input {
     kb_layout = us
-    numlock_by_default = false
+    kb_options = caps:escape
+    # kb_options = grp:win_space_toggle
+    numlock_by_default = true
     repeat_delay = 250
     repeat_rate = 35
-
-    focus_on_close = 1
 
     touchpad {
         natural_scroll = yes
         disable_while_typing = true
-        scroll_factor = 0.3
+        clickfinger_behavior = true
+        scroll_factor = 0.5
     }
+    special_fallthrough = true
+    follow_mouse = 1
 }
 
 binds {
