task: minor-tweak

--- a/config/.config/hypr/hypr_conf/keybinds.conf
+++ b/config/.config/hypr/hypr_conf/keybinds.conf
@@ -79,9 +79,11 @@ bind = SUPER SHIFT, T, exec, $theme_select
 ######################
 ## Screen Recording ##
 ######################
-bindd = Super, PRINT, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
-bindd = SUPER CTRL, PRINT, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
+bindd = Alt, Print, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
+bindd = Ctrl, Print, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
 
+# bindd = Super, PRINT, Record screen (with sound), exec, ~/.local/bin/record.sh --fullscreen-sound # Record screen (with sound)
+# bindd = SUPER CTRL, PRINT, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
 
 ##################
 ## Color picker ##
@@ -99,9 +101,11 @@ bind = Super Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboardA
 ## Fullscreen screenshot ##
 ###########################
 # bindld = ,Print, Screenshot >> clipboard ,exec,grim - | wl-copy # Screenshot >> clipboard
+
 bindld = SUPER, Y, Screenshot >> clipboard & save, exec, ~/.local/bin/screenshot.sh
 
-bindld = Ctrl,Print, Screenshot >> clipboard & save, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png && notify-send "" # Screenshot >> clipboard & file
+bindld = SUPER Alt, Y, Screenshot >> clipboard & save, exec, mkdir -p $(xdg-user-dir PICTURES)/Screenshots && grim $(xdg-user-dir PICTURES)/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png && notify-send "" # Screenshot >> clipboard & file
+
 bindle = SUPER, bracketleft, exec, ~/.local/bin/nightlight.sh --dec
 bindle = SUPER, bracketright, exec, ~/.local/bin/nightlight.sh --inc
 binde = SUPER, backslash, exec, ~/.local/bin/nightlight.sh --def
@@ -117,7 +121,6 @@ binde = SUPER, backslash, exec, ~/.local/bin/nightlight.sh --def
 # binde = Super, Minus, exec, ~/.local/bin/zoom.sh decrease 0.1 # Zoom out
 # binde = Super, Equal, exec, ~/.local/bin/zoom.sh increase 0.1 # Zoom in
 
-#!
 ##! Session
 bindl = Super, L, exec, loginctl lock-session # Lock
 # bindl = SUPER SHIFT, L, exec, systemctl poweroff || loginctl poweroff
