--- a/config/.config/hypr_caelestia/hypr-user.conf
+++ b/config/.config/hypr_caelestia/hypr-user.conf
@@ -28,6 +28,7 @@ bind = SUPER, S, exec, app2unit -- spotify-launcher
 bind = SUPER, O, exec, app2unit -- obsidian
 
 bind = SUPER, Return, exec, app2unit -- kitty
+bind = SUPER, T, exec, app2unit -- ghostty
 bind = SUPER, E, exec, app2unit -- nautilus --new-window
 bind = SUPER Alt, E, exec, app2unit -- nemo
 
@@ -35,11 +36,12 @@ bind = SUPER, N, exec, app2unit -- kitty --class nmtui-settings nmtui
 bind = SUPER, B, exec, app2unit -- blueman-manager
 bind = SUPER, V, exec, app2unit -- pavucontrol
 
-bind = SUPER, T, exec, app2unit -- ghostty
-bind = SUPER, C, exec, neovim
+bind = Super, X, exec, neovim
 # bind = SUPER, C, exec, app2unit -- neovim
-bind = SUPER, G, exec, app2unit -- github-desktop
+bind = SUPER, C, exec, gnome-text-editor --new-window # Launch GNOME Text Editor
+bind = Super, T, exec, qbittorrent # Launch qbittorrent
 
+bind = SUPER, G, exec, app2unit -- github-desktop
 # ----------------------------- #
 
 $help=~/.local/bin/keybinds.sh
@@ -48,9 +50,6 @@ bind = SUPER, Slash, exec, app2unit -- $help
 # # [Screen Recording]  
 # bindd = , PRINT, Record screen (with sound), exec, ~/.local/bin/recorder.sh --fullscreen-sound # Record screen (with sound)
 # bindd = Ctrl, Print, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
-
-bind = SUPER Alt, R, exec, ~/.local/bin/hypr-recorder.sh --fullscreen-sound
-bind = CTRL Alt, R, exec, ~/.local/bin/hypr-recorder.sh --sound
 
 # ------------------------------ #
 
