task: minor-tweak

--- a/config/.config/hypr_caelestia/hypr-user.conf
+++ b/config/.config/hypr_caelestia/hypr-user.conf
@@ -58,7 +58,7 @@ bind = SUPER, Slash, exec, app2unit -- $help
 # -------
 $out = 0.50
 
-windowrule = opacity 0.85 $out,class:^(kitty)$
+windowrule = opacity  $out,class:^(kitty)$
 #windowrule = opacity 0.90 $out,class:^(com.mitchellh.ghostty)$
 windowrule = opacity 0.85 0.80,class:^(zen)$
 windowrule = opacity 0.85 $out,class:^(org.gnome.Nautilus)$
