--- a/config/.config/hypr_caelestia/hyprland/rules.conf
+++ b/config/.config/hypr_caelestia/hyprland/rules.conf
@@ -1,5 +1,5 @@
 # ######## Window rules ########
-windowrule = opaque, class:foot|equibop  # They use native transparency
+windowrule = opaque, class:foot|equibop|kitty  # They use native transparency
 windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (not xwayland cause popups)
 
 # Disable blur for XWayland windows (or context menus with shadow would look weird)
@@ -37,9 +37,9 @@ windowrule = center 1, class:nwg-look
 
 # Special workspaces
 windowrule = workspace special:sysmon, class:btop
-windowrule = workspace special:music, class:feishin|Spotify|Supersonic
-windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wayland, it has no class for some reason
-windowrule = workspace special:communication, class:discord|equibop|vesktop|whatsapp
+windowrule = workspace special:music, class:feishin|Spotify-launcher|Supersonic
+# windowrule = workspace special:music, initialTitle:Spotify( Free)?  # Spotify wayland, it has no class for some reason
+windowrule = workspace special:communication, class:discord|equibop|vesktop|whatsapp|elecwhat
 windowrule = workspace special:todo, class:Todoist
 
 # --------------------
