task: minor-tweak

--- a/config/.config/hypr_caelestia/hyprland/rules.conf
+++ b/config/.config/hypr_caelestia/hyprland/rules.conf
@@ -53,6 +53,7 @@ windowrule = float, title:GIMP Crash Debug
 windowrule = float, title:Save As
 windowrule = float, title:Library
 
+# [ Dialog windows - Center - Float]
 windowrulev2 = float, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
 windowrulev2 = center, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
 windowrulev2 = size 800 600, class:^(.*)$, title:^(Open File|Select a File|Save As|File Upload|Open Folder|Library)(.*)$
