task: clean-up hypr_bak

--- a/config/.config/hypr_caelestia/hyprland.conf
+++ b/config/.config/hypr_caelestia/hyprland.conf
@@ -1,19 +1,26 @@
-$hypr = ~/.config/hypr/hyprland
+# -------------------
+#   Hyprland Config
+# -------------------
+$hypr = ~/.config/hypr
+$hypr_conf = ~/.config/hypr/hyprland
+
+# --------------------------
+#   (colours + other vars)
+# --------------------------
+# exec = cp -L --no-preserve=mode --update=none $hypr_conf/scheme/default.conf $hypr_conf/scheme/current.conf
+# source = $hypr/scheme/current.conf
+
+source = $hypr_conf/colours.conf
 
 # Other configs
-source = $hypr/general.conf
-source = $hypr/env.conf
-source = $hypr/animations/lime.conf
-source = $hypr/decoration.conf
-source = $hypr/execs.conf
-source = $hypr/rules.conf
-source = $hypr/keybinds.conf
-source = $hypr/colours.conf
-
-# # Overrides for different styles
-# exec = ~/.config/hypr/scripts/get-overrides.fish
-# source = $hypr/overrides.conf
+source = $hypr_conf/general.conf
+source = $hypr_conf/execs.conf
+source = $hypr_conf/decoration.conf
+source = $hypr_conf/animations/lime.conf
+source = $hypr_conf/env.conf
+source = $hypr_conf/rules.conf
+source = $hypr_conf/keybinds.conf
 
 # User styles in ~/.config/caelestia
 # exec = mkdir -p ~/.config/caelestia && touch -a ~/.config/caelestia/hypr-user.conf
-source = $hypr/hyprland/caelestia/hypr-user
+source = $hypr/hypr-user.conf
