--- a/config/.config/hypr_caelestia/hyprland/colours.conf
+++ b/config/.config/hypr_caelestia/hyprland/colours.conf
@@ -1,5 +1,5 @@
-exec = cp --update=none ~/.config/hypr/scheme/default.conf ~/.config/hypr/scheme/current.conf
-source = ~/.config/hypr/scheme/current.conf
+exec = cp -L --no-preserve=mode --update=none $hypr_conf/scheme/default.conf $hypr_conf/scheme/current.conf
+source = $hypr/scheme/current.conf
 
 group {
     groupbar {
