--- a/config/.config/hypr_caelestia/hyprland/general.conf
+++ b/config/.config/hypr_caelestia/hyprland/general.conf
@@ -1,5 +1,39 @@
 monitor = , preferred, auto, 1.2
 
+general {
+    # Gaps and border
+    gaps_in = 5
+    gaps_out = 8
+    gaps_workspaces = 20
+    border_size = 5
+
+    # col.active_border = rgba($primary6)
+    # col.inactive_border = rgba($onSurfaceVariant11)
+
+    layout = dwindle
+    allow_tearing = false  # Allows `immediate` window rule to work
+}
+
+dwindle {
+	preserve_split = true
+	smart_split = false
+	smart_resizing = true
+}
+
+group {
+    groupbar {
+        font_family = JetBrains Mono NF
+        font_size = 15
+        gradients = true
+        gradient_round_only_edges = false
+        gradient_rounding = 5
+        height = 25
+        indicator_height = 0
+        gaps_in = 3
+        gaps_out = 3
+    }
+}
+
 input {
     kb_layout = us
     kb_options = caps:escape
@@ -31,34 +65,6 @@ gestures {
     workspace_swipe_direction_lock = true
     workspace_swipe_direction_lock_threshold = 10
     workspace_swipe_create_new = true
-}
-
-general {
-    gaps_workspaces = 20
-
-    layout = dwindle
-
-    allow_tearing = false  # Allows `immediate` window rule to work
-}
-
-dwindle {
-	preserve_split = true
-	smart_split = false
-	smart_resizing = true
-}
-
-group {
-    groupbar {
-        font_family = JetBrains Mono NF
-        font_size = 15
-        gradients = true
-        gradient_round_only_edges = false
-        gradient_rounding = 5
-        height = 25
-        indicator_height = 0
-        gaps_in = 3
-        gaps_out = 3
-    }
 }
 
 misc {
