--- a/config/.config/hypr_caelestia/hyprland/execs.conf
+++ b/config/.config/hypr_caelestia/hyprland/execs.conf
@@ -10,8 +10,9 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = trash-empty 30
 
 # Cursors
-exec-once = hyprctl setcursor sweet-cursors 24
-exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'sweet-cursors'
+exec-once = sleep 1 && hyprctl setcursor Bibata-Mordern-Ice 34
+exec-once = sleep 1 && gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Mordern-Ice'
+exec-once = sleep 1 && gsettings set org.gnome.desktop.interface cursor-size 34
 
 # Location provider and night light
 exec-once = /usr/lib/geoclue-2.0/demos/agent
@@ -25,9 +26,6 @@ exec-once = mpris-proxy
 
 # Resize and move picture in picture windows
 exec-once = caelestia pip -d
-
-# Reload hyprland when config changes (to regenerate everything)
-exec-once = ~/.config/hypr/scripts/monitor-config.fish
 
 # Start shell
 exec-once = caelestia shell -d
