task: modify keybinds for caelestia

--- a/config/.config/hypr_caelestia/hyprland/keybinds.conf
+++ b/config/.config/hypr_caelestia/hyprland/keybinds.conf
@@ -49,12 +49,17 @@ bindle = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wp
 # --------
 #  MEDIA
 # --------
-bindl = CTRL SUPER, Space, global, caelestia:mediaToggle
+bindl = Ctrl SUPER, Space, global, caelestia:mediaToggle
+bindl = , XF86AudioStop, global, caelestia:mediaStop
+
 bindl = , XF86AudioPlay, global, caelestia:mediaToggle
 bindl = , XF86AudioPause, global, caelestia:mediaToggle
-bindl = CTRL SUPER, Equal, global, caelestia:mediaNext
+
+bindl = Ctrl SUPER, Equal, global, caelestia:mediaNext
+bindl = Ctrl SUPER, Minus, global, caelestia:mediaPrev
+
 bindl = , XF86AudioNext, global, caelestia:mediaNext
-bindl = , XF86AudioStop, global, caelestia:mediaStop
+bindl = , XF86AudioPrev, global, caelestia:mediaPrev
 
 # -----------------------------------
 #   Kill/Restart - Caelestia Daemon
