--- a/config/.config/hypr_caelestia/hyprland/colours.conf
+++ b/config/.config/hypr_caelestia/hyprland/colours.conf
@@ -1,7 +1,17 @@
 exec = cp -L --no-preserve=mode --update=none $hypr_conf/scheme/default.conf $hypr_conf/scheme/current.conf
 source = $hypr/scheme/current.conf
 
+general{
+    col.active_border = rgba($primarye6)
+    col.inactive_border = rgba($onSurfaceVariant11)
+}
+
 group {
+    col.border_active = rgba($primarye6)
+    col.border_inactive = rgba($onSurfaceVariant11)
+    col.border_locked_active = rgba($primarye6)
+    col.border_locked_inactive = rgba($onSurfaceVariant11)
+
     groupbar {
         text_color = rgb($onPrimary)
         col.active = rgba($primaryd4)
@@ -12,5 +22,5 @@ group {
 }
 
 misc {
-	background_color = rgb($surfaceVariant)
+    background_color = rgb($surfaceVariant)
 }
