--- a/config/.config/hypr_caelestia/hyprland/decoration.conf
+++ b/config/.config/hypr_caelestia/hyprland/decoration.conf
@@ -13,6 +13,10 @@ decoration {
 
     shadow {
         enabled = true
+        range = 20
+        render_power = 3
+        color = rgba($surfaced4)
+
     }
 
 }
