--- a/config/.config/hypr_caelestia/hyprland/general.conf
+++ b/config/.config/hypr_caelestia/hyprland/general.conf
@@ -1,14 +1,10 @@
 monitor = , preferred, auto, 1.2
 
 general {
-    # Gaps and border
     gaps_in = 5
     gaps_out = 8
     gaps_workspaces = 20
     border_size = 5
-
-    # col.active_border = rgba($primary6)
-    # col.inactive_border = rgba($onSurfaceVariant11)
 
     layout = dwindle
     allow_tearing = false  # Allows `immediate` window rule to work
@@ -84,6 +80,8 @@ misc {
 
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
+	
+    background_color = rgb($surfaceVariant)
 }
 
 debug {
