taks: rm colors.conf & added colors to each individual config

--- a/config/.config/hypr_caelestia/hyprland.conf
+++ b/config/.config/hypr_caelestia/hyprland.conf
@@ -7,10 +7,9 @@ $hypr_conf = ~/.config/hypr/hyprland
 # --------------------------
 #   (colours + other vars)
 # --------------------------
-# exec = cp -L --no-preserve=mode --update=none $hypr_conf/scheme/default.conf $hypr_conf/scheme/current.conf
-# source = $hypr/scheme/current.conf
+exec = cp -L --no-preserve=mode --update=none $hypr_conf/scheme/default.conf $hypr_conf/scheme/current.conf
 
-source = $hypr_conf/colours.conf
+source = $hypr/scheme/current.conf
 
 # Other configs
 source = $hypr_conf/general.conf
