--- a/config/.config/hypr_caelestia/hyprland/general.conf
+++ b/config/.config/hypr_caelestia/hyprland/general.conf
@@ -5,6 +5,9 @@ general {
     gaps_out = 8
     gaps_workspaces = 20
     border_size = 5
+    
+    col.active_border = rgba($primarye6)
+    col.inactive_border = rgba($onSurfaceVariant11)
 
     layout = dwindle
     allow_tearing = false  # Allows `immediate` window rule to work
@@ -17,6 +20,11 @@ dwindle {
 }
 
 group {
+    col.border_active = rgba($primarye6)
+    col.border_inactive = rgba($onSurfaceVariant11)
+    col.border_locked_active = rgba($primarye6)
+    col.border_locked_inactive = rgba($onSurfaceVariant11)
+    
     groupbar {
         font_family = JetBrains Mono NF
         font_size = 15
@@ -27,6 +35,12 @@ group {
         indicator_height = 0
         gaps_in = 3
         gaps_out = 3
+
+        text_color = rgb($onPrimary)
+        col.active = rgba($primaryd4)
+        col.inactive = rgba($outlined4)
+        col.locked_active = rgba($primaryd4)
+        col.locked_inactive = rgba($secondaryd4)
     }
 }
 
