--- a/config/.config/hypr_caelestia/hyprland/execs.conf
+++ b/config/.config/hypr_caelestia/hyprland/execs.conf
@@ -2,6 +2,10 @@
 exec-once = gnome-keyring-daemon --start --components=secrets
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
+# Location provider and night light
+exec-once = /usr/lib/geoclue-2.0/demos/agent
+exec-once = sleep 1 && gammastep
+
 # Clipboard history
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
@@ -9,14 +13,16 @@ exec-once = wl-paste --type image --watch cliphist store
 # Auto delete trash 30 days old
 exec-once = trash-empty 30
 
+# Start shell
+exec-once = caelestia shell -d
+
+# Resize and move picture in picture windows
+exec-once = caelestia pip -d
+
 # Cursors
 exec-once = sleep 1 && hyprctl setcursor Bibata-Mordern-Ice 34
 exec-once = sleep 1 && gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Mordern-Ice'
 exec-once = sleep 1 && gsettings set org.gnome.desktop.interface cursor-size 34
-
-# Location provider and night light
-exec-once = /usr/lib/geoclue-2.0/demos/agent
-exec-once = sleep 1 && gammastep
 
 # Idle inhibit when audio playing
 exec-once = sway-audio-idle-inhibit --ignore-source-outputs cava
@@ -24,11 +30,8 @@ exec-once = sway-audio-idle-inhibit --ignore-source-outputs cava
 # Forward bluetooth media commands to MPRIS
 exec-once = mpris-proxy
 
-# Resize and move picture in picture windows
-exec-once = caelestia pip -d
-
-# Start shell
-exec-once = caelestia shell -d
-
 # Idle daemon
 exec-once = hypridle
+
+# Wayvibes
+exec-once = wayvibes ~/.config/key-sounds/akko_lavender_purples -v 8 --background
