--- a/config/.config/hypr_caelestia/hyprland/rules.conf
+++ b/config/.config/hypr_caelestia/hyprland/rules.conf
@@ -93,8 +93,8 @@ windowrule = noshadow, xwayland:1, title:win[0-9]+
 windowrule = rounding 10, xwayland:1, title:win[0-9]+
 
 # ######## Workspace rules ########
-workspace = w[tv1]s[false], gapsout:20, gapsin:20
-workspace = f[1]s[false], gapsout:20, gapsin:20
+workspace = w[tv1]s[false], gapsout:15
+workspace = f[1]s[false], gapsout:15
 
 # ######## Layer rules ########
 layerrule = animation fade, hyprpicker  # Colour picker out animation
