made font bigger & enable bg_opacity

--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -7,19 +7,19 @@ bold_italic_font auto
 
 enable_audio_bell yes
 
-font_size 14
+font_size 15
 
 window_padding_width 10
 
 # Kitty Theme
-include ./themes/caelestia.conf
+include ./themes/gruvbox_dark.conf
 
 # Cursor 
 cursor_trail 1
 cursor_blink_interval 0.5
 cursor_stop_blinking_after 13.0
 
-# background_opacity 0.60
+background_opacity 0.80
 
 allow_remote_control yes
 
