--- a/config/.config/starship.toml
+++ b/config/.config/starship.toml
@@ -46,7 +46,6 @@ disabled = false
 style = "fg:color_orange"
 
 [os.symbols]
-Android = ""
 Arch = ""
 # Arch = "󰣇"
 Linux = "󰌽"
@@ -78,15 +77,16 @@ home_symbol = " "
 [git_branch]
 symbol = ""
 style = "color_blue"
-format = '[ $symbol $branch ]($style)'
+format = '[ $symbol $branch]($style)'
 
 [git_status]
 style = "color_green"
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+format = "[[( *$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+fetch = " " 
 conflicted = " "  
 untracked  = " "  
 modified   = " "  
-staged     = " "  
+staged     = " "  
 renamed    = " "  
 deleted    = " "  
 stashed    = "≡"
