--- a/config/.config/hypr_caelestia/hyprland/keybinds.conf
+++ b/config/.config/hypr_caelestia/hyprland/keybinds.conf
@@ -224,7 +224,7 @@ bind = SUPER Alt, R, exec, caelestia record -s  # Record screen with sound
 bind = Ctrl Alt, R, exec, caelestia record  # Record screen
 bind = SUPER+Shift+Alt, R, exec, caelestia record -r  # Record region
 
-bind = SUPER+Shift, C, exec, hyprpicker -a  # Colour picker
+bind = SUPER SHIFT, C, exec, hyprpicker -a  # Colour picker
 
 # -------------------------------
 #   Clipboard and emoji picker
