minor-tweak for hypr-user & execs

--- a/config/.config/hypr_caelestia/hyprland/execs.conf
+++ b/config/.config/hypr_caelestia/hyprland/execs.conf
@@ -13,16 +13,15 @@ exec-once = wl-paste --type image --watch cliphist store
 # Auto delete trash 30 days old
 exec-once = trash-empty 30
 
+# Cursors
+exec-once = hyprctl setcursor Bibata-Mordern-Ice 34
+
 # Start shell
-exec-once = caelestia shell -d
+# exec-once = caelestia shell -d
+exec-once = qs -c caelestia
 
 # Resize and move picture in picture windows
 exec-once = caelestia pip -d
-
-# Cursors
-exec-once = sleep 2 && hyprctl setcursor Bibata-Mordern-Ice 34
-exec-once = sleep 2 && gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Mordern-Ice'
-exec-once = sleep 2 && gsettings set org.gnome.desktop.interface cursor-size 34
 
 # Idle inhibit when audio playing
 exec-once = sway-audio-idle-inhibit --ignore-source-outputs cava
