minor-tweak for hypr-user & execs

--- a/config/.config/hypr_caelestia/hypr-user.conf
+++ b/config/.config/hypr_caelestia/hypr-user.conf
@@ -1,12 +1,10 @@
 #----------------
 # Source Config
 #----------------
-source=~/.config/caelestia/animations/lime.conf
 
 # ------
 #  EXEC
 # ------
-exec-once = sleep 2 && hyprctl setcursor Bibata-Modern-Ice 35
 
 #-------------------------------#
 
@@ -35,12 +33,11 @@ bind = SUPER, N, exec, app2unit -- kitty --class nmtui-settings nmtui
 bind = SUPER, B, exec, app2unit -- blueman-manager
 bind = SUPER, V, exec, app2unit -- pavucontrol
 
-bind = Super, X, exec, neovim
-# bind = SUPER, C, exec, app2unit -- neovim
-bind = SUPER, C, exec, gnome-text-editor --new-window # Launch GNOME Text Editor
-bind = Super, T, exec, qbittorrent # Launch qbittorrent
-
+bind = Super, X, exec, app2unit -- neovim
+# bind = SUPER, C, exec, gnome-text-editor --new-window # Launch GNOME Text Editor
+# bind = Super, T, exec, qbittorrent # Launch qbittorrent
 bind = SUPER, G, exec, app2unit -- github-desktop
+
 # ----------------------------- #
 
 $help=~/.local/bin/keybinds.sh
@@ -49,20 +46,20 @@ bind = SUPER, Slash, exec, app2unit -- $help
 # # [Screen Recording]  
 # bindd = , PRINT, Record screen (with sound), exec, ~/.local/bin/recorder.sh --fullscreen-sound # Record screen (with sound)
 # bindd = Ctrl, Print, Record region (with sound), exec, ~/.local/bin/record.sh --sound # Record region (with sound)
-
 # ------------------------------ #
 
 # -------
 #  Rules
 # -------
+$in = 0.85
 $out = 0.50
 
 windowrule = opacity  $out,class:^(kitty)$
-#windowrule = opacity 0.90 $out,class:^(com.mitchellh.ghostty)$
-windowrule = opacity 0.85 0.80,class:^(zen)$
-windowrule = opacity 0.85 $out,class:^(org.gnome.Nautilus)$
-windowrule = opacity 0.85 $out,class:^(spotify)$
-windowrule = opacity 0.85 $out,class:^(obsidian)$
+#windowrule = opacity $in $out,class:^(com.mitchellh.ghostty)$
+windowrule = opacity $in 0.80,class:^(zen)$
+windowrule = opacity $in $out,class:^(org.gnome.Nautilus)$
+windowrule = opacity $in $out,class:^(spotify)$
+windowrule = opacity $in $out,class:^(obsidian)$
 
 # Obsidian Fix IG?? ¯\_(ツ)_/¯
 windowrule = float, class:^(obsidian)$
