task: added hyprpaper.conf

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 config/.config/tmux/plugins/*
 
 config/.config/hypr/.cache/*
+config/.config/hypr/hyprpaper.conf
 
 config/.config/hypr_caelestia/scheme/current.conf
 
